--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,15 +1,15 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
 	"files": {
-		"include": ["src", "*.*"],
-		"ignore": ["node_modules", ".git", "tmp", "lib"]
+		"include": ["**/*"],
+		"ignore": ["node_modules", "dist", ".turbo", ".next", "storybook-static", "tmp"]
 	},
 	"formatter": {
 		"indentStyle": "tab",
-		"lineWidth": 200
+		"lineWidth": 120
 	},
 	"javascript": {
 		"formatter": {
@@ -25,21 +25,29 @@
 				"noNamespace": "off",
 				"noParameterProperties": "off",
 				"useBlockStatements": "off",
-				"noNonNullAssertion": "off"
+				"noNonNullAssertion": "off",
+				"useFilenamingConvention": "off",
+				"noImplicitBoolean": "off"
 			},
 			"performance": {
 				"noBarrelFile": "off",
-				"noReExportAll": "off"
+				"noReExportAll": "off",
+				"useTopLevelRegex": "off"
 			},
 			"correctness": {
 				"noUndeclaredVariables": "off",
-				"noUnusedVariables": "off"
+				"noUnusedVariables": "off",
+				"noNodejsModules": "off",
+				"useImportExtensions": "off",
+				"noUnusedFunctionParameters": "off"
 			},
 			"suspicious": {
 				"useAwait": "off",
+				"noConsole": "off",
 				"noConsoleLog": "off",
 				"noExplicitAny": "off",
-				"noEmptyBlockStatements": "off"
+				"noEmptyBlockStatements": "off",
+				"noReactSpecificProps": "off"
 			},
 			"complexity": {
 				"noBannedTypes": "off",
