--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@reizt/proc",
-	"version": "0.0.1-alpha.3",
+	"version": "0.0.1-alpha.4",
 	"repository": "git@github.com:reizt/proc.git",
 	"author": "reizt <reizt.dev@gmail.com>",
 	"license": "MIT",
@@ -36,8 +36,13 @@
 		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^22.15.29",
 		"lefthook": "^1.11.13",
+		"next": "^15.3.3",
 		"npm-run-all": "^4.1.5",
 		"typescript": "^5.8.3",
 		"vitest": "^3.1.4"
+	},
+	"peerDependencies": {
+		"hono": "^4.7.11",
+		"next": "^15.3.3"
 	}
 }
