--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"files": ["lib/cjs/**/*.js", "lib/esm/**/*.js", "lib/types/**/*.d.ts"],
 	"scripts": {
+		"postinstall": "lefthook install",
 		"build": "run-s clean && run-p build.*",
 		"clean": "rm -rf lib/*",
 		"build.cjs": "tsc --project tsconfig.cjs.json",
@@ -25,9 +26,10 @@
 		"format": "biome check --write .",
 		"check": "run-p check.*",
 		"check.biome": "biome check .",
-		"check.tsc": "tsc --incremental --noEmit",
+		"check.tsc": "tsc --incremental --noEmit --project tsconfig.test.json",
 		"check.vitest": "vitest run",
-		"test": "vitest watch"
+		"test": "vitest watch",
+		"test.next": "next dev"
 	},
 	"dependencies": {
 		"zod": "^3.25.46"
@@ -35,9 +37,12 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^22.15.29",
+		"@types/react": "^19.1.6",
+		"@types/react-dom": "^19.1.5",
 		"lefthook": "^1.11.13",
-		"next": "^15.3.3",
 		"npm-run-all": "^4.1.5",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"typescript": "^5.8.3",
 		"vitest": "^3.1.4"
 	},
