--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@reizt/proc",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"repository": "git@github.com:reizt/proc.git",
 	"author": "reizt <reizt.dev@gmail.com>",
 	"license": "MIT",
@@ -31,9 +31,6 @@
 		"test": "vitest watch",
 		"test.next": "next dev"
 	},
-	"dependencies": {
-		"zod": "^3.25.46"
-	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^22.15.29",
@@ -48,6 +45,7 @@
 	},
 	"peerDependencies": {
 		"hono": "^4.7.11",
-		"next": "^15.3.3"
+		"next": "^15.3.3",
+		"zod": "^3.25.46"
 	}
 }
