--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*.ts", "*.ts", "*.mts", "app/**/*.ts", "app/**/*.tsx"],
+  "include": ["src/**/*.ts", "*.ts", "*.mts"],
   "exclude": ["node_modules", "src/**/*.test.ts"],
   "references": [
     {
